--- a/git.html
+++ b/git.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
  
-    <title>Document</title>
+
+    <title>website make</title>
 </head>
 <body>
-    
+
+    <h1>This is heading 1</h1>
+
+    <p>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been thgi   
+         industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+    </p>
 </body>
 </html>
